set header height to avoid overlapping page content

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 /* header and nav layout */
-header {
+header .header {
   width: 100%;
   z-index: 2;
   position: fixed;
